christmas-shop/style.css
:root {
  --primary: #ff4646;
  --dark: #181c29;
  --static-white: #fff;
  --content-background: #ecf3f8;
  --tag-purple: #4361ff;
  --tag-pink: #ff43f7;
  --tag-green: #06a44f;
  --primary-10: rgba(255, 70, 70, 0.1);
  --static-white-20: rgba(255, 255, 255, 0.2);
  --static-white-40: rgba(255, 255, 255, 0.4);
  --font-family: "Montserrat", sans-serif;
  --second-family: "Allura", sans-serif;
  --third-family: "SF Pro", sans-serif;
}

html {
  box-sizing: border-box;
  color: var(--static-white);
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

body {
  margin: 0 auto;
  max-width: 1440px;
}

a {
  color: inherit;
  text-decoration: none;
}

li {
  list-style: none;
}

img{
  max-width: 100%;
}

.container {
  max-width: 1276px;
  margin: 0 auto;
}

section {
  background-image: url("assets/img/img-compressed/bg-snow.png");
  padding: 60px 0;
}

h1, h2, h3, h4, p {
  margin: 0;
}

/* header start */

.logo_wrap {
  display: flex;
  gap: 8px;
  align-items: center;
  padding: 8px 20px;
  text-align: center;
  cursor: pointer;
  border: 1px solid transparent;
  transition: .3s ease;
}

.logo_wrap img {
  width: 24px;
  height: 24px;
}

.logo_title {
  text-transform: uppercase;
  font-family: var(--font-family);
  font-weight: 600;
  font-size: 12px;
  line-height: 130%;
  letter-spacing: 0.05em;
  color: var(--dark);
}

header .container {
  display: flex;
  justify-content: space-between;
  font-family: var(--font-family);
  font-weight: 600;
  font-size: 12px;
  line-height: 130%;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: var(--dark);
}

.menu {
  display: flex;
  text-transform: uppercase;
  padding-left: 0;
  gap: 6px;
}

.menu a {
  display: block;
  padding: 12px 20px;
  border: 1px solid transparent;
  transition: .3s ease;
}

.menu a:hover {
  border-radius: 12px;
  background: var(--primary-10);
  color: var(--primary);
}

/* the end of the header */

/* main */

main {
  background: var(--primary);
  border-radius: 20px 20px 0 0;
}

.hero {
  background-image: url("assets/img/img-compressed/bg-snow.png"), url("assets/img/img-compressed/bg-ball.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  border-radius: 20px 20px 0 0;
  padding-top: 120px;
  padding-bottom: 120px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 11px;
}

.section_subtitle {
  font-family: var(--second-family);
  font-weight: 400;
  font-size: 24px;
  line-height: 100%;
  letter-spacing: 0.05em;
  text-align: center;
  color: var(--static-white);
}

.main_title {
  font-family: var(--font-family);
  font-weight: 600;
  font-size: 32px;
  line-height: 150%;
  letter-spacing: 0.18em;
  text-transform: uppercase;
  text-align: center;
  color: var(--static-white);
}

.main_btn {
  border-radius: 20px;
  padding: 20px 30px;
  width: 235px;
  height: 56px;
  background: var(--dark);

  font-family: var(--font-family);
  font-weight: 600;
  font-size: 12px;
  line-height: 130%;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  text-align: center;
  color: var(--static-white);
  transition: .3s ease;
  cursor: pointer;
}

.main_btn:hover {
  background: var(--static-white);
  border: var(--static-white);
  color: var(--dark);
}

/* about */

.about {
  padding: 60px 0;
  background: url("assets/img/img-compressed/bg-snow.png");
}

.about__inner {
  background: var(--static-white);
  border-radius: 20px;
  display: flex;
  justify-content: space-between;
}

.about__inner-text {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  gap: 20px;
  padding-left: 60px;
  color: var(--dark);
}

.about__inner-description {
  font-family: var(--font-family);
  font-weight: 400;
  font-size: 16px;
  line-height: 148%;
}

.about__inner img {
  border-radius: 20px;
}

.section_subtitle-about {
  text-align: left;
  color: var(--primary);
}

.section__title {
  font-family: var(--font-family);
  font-weight: 600;
  font-size: 24px;
  line-height: 152%;
  letter-spacing: 0.16em;
  text-transform: uppercase;
  color: var(--static-white);
}

.section__title-about {
  color: var(--dark);
}

.about__text {
  font-family: var(--font-family);
  font-weight: 400;
  font-size: 16px;
  line-height: 148%;
  color: var(--dark);
}

/* slider */

.slider {
  background: url("assets/img/img-compressed/bg-snow.png");
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow: hidden;
}

.row {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 20px;
}

.slider__text {
  font-size: 80px;
  font-weight: 600;
  text-transform: uppercase;
  font-family: var(--font-family);
}

.slider__image {
  width: 200px;
  height: 200px;
  border-radius: 20px;
}

.controls {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  gap: 20px;
}

.arrow {
  width: 56px;
  height: 56px;
  border: 1px solid var(--static-white);
  border-radius: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  transition: .3s ease;
}

.arrow__left {
  rotate: 180deg;
}

.arrow:hover {
  background: var(--static-white);
}

.arrow:hover svg path {
  stroke: #ff4646;
}

.disabled {
  border: 1px solid var(--static-white-40);
  cursor: auto;
  background: none;
  cursor: not-allowed;
  pointer-events: none;
}

/* gifts */

.gifts {
  display: flex;
  flex-direction: column;
  align-items: center;
  background: url("assets/img/img-compressed/bg-snow.png");
}

.gifts__wrap {
  display: flex;
  flex-direction: row;
  gap: 12px;
}

.gift__card {
  width: 310px;
  height: 342px;
  border-radius: 20px;
  background: var(--content-background);
  color: var(--dark);
  cursor: pointer;
}

.gift__card-subtitle {
  font-family: var(--font-family);
  font-weight: 600;
  font-size: 12px;
  line-height: 130%;
  letter-spacing: 0.05em;
  text-transform: uppercase;
}

.gift__card-title {
  font-family: var(--font-family);
  font-weight: 600;
  font-size: 16px;
  line-height: 152%;
  letter-spacing: 0.08em;
  text-transform: uppercase;
  color: var(--dark);
}

.gift__card-titles {
  padding-top: 20px;
  padding-left: 20px;
  /*padding-bottom: 20px;*/
  border-radius: 20px;
  background: var(--static-white);
  height: 112px;
  gap: 8px;
}

.card__for-work {
  color: var(--tag-purple);
}

.card__for-health {
  color: var(--tag-green);
}

.card__for-harmony {
  color: var(--tag-pink);
}

.gift__card:hover h3 {
  color: var(--primary);
}

/* CTA */

.cta {
  background: url("assets/img/img-compressed/bg-forest.png"),
              url("assets/img/img-compressed/bg-snow.png");
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  padding: 60px 0;
}

.cta__container {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  padding: 60px 0;
}

.timer {
  border-radius: 20px;
  padding: 8px 12px 12px 12px;
  width: 344px;
  height: 72px;
  display: flex;
  gap: 20px;
  padding: 20px;
  justify-content: center;
  align-items: center;
  background: var(--static-white-40);
  position: relative;
}

.time-box {
  text-align: center;
  color: var(--static-white);
  position: relative;
}

.time-box:not(:last-child)::after {
  content: '';
  width: 1px;
  height: 50%;
  background: var(--static-white);
  position: absolute;
  right: -10px;
  top: 25%;
}

.time {
  font-weight: 600;
  font-size: 24px;
  line-height: 152%;
  letter-spacing: 0.16em;
  text-transform: uppercase;
  text-align: center;
}

.label {
  font-weight: 600;
  font-size: 12px;
  line-height: 130%;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  text-align: center;
}

/* footer */

footer {
  padding: 60px 0;
}

.footer__first__container {
  display: flex;
  flex-direction: row;
  gap: 12px;
  margin-bottom: 60px;
}

footer .section__title, .section__subtitle {
  color: var(--dark);
}

.footer__card {
  display: flex;
  flex: 1;
  flex-direction: column;
  align-items: center;
  gap: 12px;
  background: var(--content-background);
  border-radius: 20px;
  padding: 20px;
  transition: .3s ease;
  cursor: pointer;
  text-transform: uppercase;
}

.footer__card:hover p {
  color: var(--primary);
}

.footer__second__container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 12px;
}

.socials {
  display: flex;
  gap: 20px;
}

.social__container {
  width: 40px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.social__container:hover svg path {
  stroke: #ff4646;
}

.footer__paragraph {
  font-family: var(--font-family);
  font-weight: 400;
  font-size: 16px;
  line-height: 148%;
  text-align: center;
  color: var(--dark);
  transition: .3s ease;
}

footer a p:hover {
  color: var(--primary);
}

